vlib/v/parser/tests/chan_no_type_map_fn_arg_err.vv
fn takes_map(chans map[string]chan) {}
